samples/_failures_safe/1761436504_2ea7dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d894df15.c: In function ‘main’:
./samples/SAFE/__tmp_d894df15.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("\nSelect operation (1-%d): ", num_operations);
      |     ^~~~~~
